@@ -1,3 +1,8 @@
+2009-05-26  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php (scorerender_get_def_settings):
+	- Better auto-detection of binary locations.
+
 2009-05-09  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php (scorerender_process_content):
